[package]
name = "pw-api"
version = "2.0.3"
edition = "2021"
authors = ["HiFiBerry <info@hifiberry.com>"]
license = "MIT"
default-run = "pipewire-api"

[lib]
name = "pw_api"
path = "src/lib.rs"

[[bin]]
name = "pipewire-api"
path = "src/pipewire-api.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
humantime = "2.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
